crates/opi-tui/tests/snapshots/diff_view_snapshots__diff_view_content_to_empty_80x24.snap
---
source: crates/opi-tui/tests/diff_view_snapshots.rs
assertion_line: 125
expression: "render(dv, 80, 24)"
---
┌ diff: deleted_file.rs ───────────────────────────────────────────────────────┐
│@@ -1,1 +1,0 @@                                                               │
│ 1   │ -fn main() {}                                                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
