crates/opi-tui/tests/snapshots/diff_view_snapshots__diff_view_empty_to_content_80x24.snap
---
source: crates/opi-tui/tests/diff_view_snapshots.rs
assertion_line: 119
expression: "render(dv, 80, 24)"
---
┌ diff: new_file.rs ───────────────────────────────────────────────────────────┐
│@@ -1,0 +1,1 @@                                                               │
│   1 │ +fn main() {}                                                          │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
