crates/opi-tui/tests/snapshots/diff_view_snapshots__diff_view_no_changes_80x24.snap
---
source: crates/opi-tui/tests/diff_view_snapshots.rs
assertion_line: 83
expression: "render(dv, 80, 24)"
---
┌ diff: src/main.rs ───────────────────────────────────────────────────────────┐
│(no changes)                                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
