crates/opi-tui/tests/snapshots/diff_view_snapshots__diff_view_removals_only_80x24.snap
---
source: crates/opi-tui/tests/diff_view_snapshots.rs
assertion_line: 72
expression: "render(dv, 80, 24)"
---
┌ diff: src/main.rs ───────────────────────────────────────────────────────────┐
│@@ -1,4 +1,2 @@                                                               │
│ 1 1 │ fn main() {                                                            │
│ 2   │ -    println!("hello");                                                │
│ 3   │ -    println!("world");                                                │
│ 4 2 │ }                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
