crates/opi-tui/tests/snapshots/diff_view_snapshots__diff_view_simple_edit_120x40.snap
---
source: crates/opi-tui/tests/diff_view_snapshots.rs
assertion_line: 48
expression: "render(dv, 120, 40)"
---
┌ diff: src/main.rs ───────────────────────────────────────────────────────────────────────────────────────────────────┐
│@@ -1,3 +1,3 @@                                                                                                       │
│ 1 1 │ fn main() {                                                                                                    │
│ 2   │ -    println!("hello");                                                                                        │
│   2 │ +    println!("hello, world");                                                                                 │
│ 3 3 │ }                                                                                                              │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
