crates/opi-tui/tests/snapshots/diff_view_snapshots__diff_view_simple_edit_80x24.snap
---
source: crates/opi-tui/tests/diff_view_snapshots.rs
assertion_line: 40
expression: "render(dv, 80, 24)"
---
┌ diff: src/main.rs ───────────────────────────────────────────────────────────┐
│@@ -1,3 +1,3 @@                                                               │
│ 1 1 │ fn main() {                                                            │
│ 2   │ -    println!("hello");                                                │
│   2 │ +    println!("hello, world");                                         │
│ 3 3 │ }                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
