crates/opi-tui/tests/snapshots/diff_view_snapshots__diff_view_truncation_120x40.snap
---
source: crates/opi-tui/tests/diff_view_snapshots.rs
assertion_line: 119
expression: "render(dv, 120, 40)"
---
┌ diff: big_file.txt ──────────────────────────────────────────────────────────────────────────────────────────────────┐
│@@ -1,30 +1,30 @@                                                                                                     │
│  1    │ -line 0                                                                                                      │
│  2    │ -line 1                                                                                                      │
│  3    │ -line 2                                                                                                      │
│  4    │ -line 3                                                                                                      │
│  5    │ -line 4                                                                                                      │
│  6    │ -line 5                                                                                                      │
│  7    │ -line 6                                                                                                      │
│  8    │ -line 7                                                                                                      │
│  9    │ -line 8                                                                                                      │
│ 10    │ -line 9                                                                                                      │
│ 11    │ -line 10                                                                                                     │
│ 12    │ -line 11                                                                                                     │
│ 13    │ -line 12                                                                                                     │
│ 14    │ -line 13                                                                                                     │
│ 15    │ -line 14                                                                                                     │
│ 16    │ -line 15                                                                                                     │
│ 17    │ -line 16                                                                                                     │
│ 18    │ -line 17                                                                                                     │
│ 19    │ -line 18                                                                                                     │
│ 20    │ -line 19                                                                                                     │
│ 21    │ -line 20                                                                                                     │
│ 22    │ -line 21                                                                                                     │
│ 23    │ -line 22                                                                                                     │
│ 24    │ -line 23                                                                                                     │
│ 25    │ -line 24                                                                                                     │
│ 26    │ -line 25                                                                                                     │
│ 27    │ -line 26                                                                                                     │
│ 28    │ -line 27                                                                                                     │
│ 29    │ -line 28                                                                                                     │
│ 30    │ -line 29                                                                                                     │
│     1 │ +line 0 modified                                                                                             │
│     2 │ +line 1 modified                                                                                             │
│     3 │ +line 2 modified                                                                                             │
│     4 │ +line 3 modified                                                                                             │
│     5 │ +line 4 modified                                                                                             │
│     6 │ +line 5 modified                                                                                             │
│     7 │ +line 6 modified                                                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
