crates/opi-tui/tests/snapshots/diff_view_snapshots__diff_view_truncation_80x24.snap
---
source: crates/opi-tui/tests/diff_view_snapshots.rs
assertion_line: 109
expression: "render(dv, 80, 24)"
---
┌ diff: big_file.txt ──────────────────────────────────────────────────────────┐
│@@ -1,30 +1,30 @@                                                             │
│  1    │ -line 0                                                              │
│  2    │ -line 1                                                              │
│  3    │ -line 2                                                              │
│  4    │ -line 3                                                              │
│  5    │ -line 4                                                              │
│  6    │ -line 5                                                              │
│  7    │ -line 6                                                              │
│  8    │ -line 7                                                              │
│  9    │ -line 8                                                              │
│ 10    │ -line 9                                                              │
│ 11    │ -line 10                                                             │
│ 12    │ -line 11                                                             │
│ 13    │ -line 12                                                             │
│ 14    │ -line 13                                                             │
│ 15    │ -line 14                                                             │
│ 16    │ -line 15                                                             │
│ 17    │ -line 16                                                             │
│ 18    │ -line 17                                                             │
│ 19    │ -line 18                                                             │
│ 20    │ -line 19                                                             │
│ 21    │ -line 20                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
