crates/opi-tui/tests/snapshots/diff_view_snapshots__phase11_edit_diff_preview_metadata_snapshot.snap
---
source: crates/opi-tui/tests/diff_view_snapshots.rs
assertion_line: 152
expression: "render(dv, 80, 24)"
---
┌ diff: src/greet.rs ──────────────────────────────────────────────────────────┐
│@@ -1,3 +1,3 @@                                                               │
│ 1 1 │ fn greet() {                                                           │
│ 2   │ -    println!("hi");                                                   │
│   2 │ +    println!("hello");                                                │
│ 3 3 │ }                                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
